--- a/Micco/Base.lproj/Main.storyboard
+++ b/Micco/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jdy-GY-prn">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="Jdy-GY-prn">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
@@ -27,41 +27,54 @@
                                             <action selector="showCamera:" destination="BYZ-38-t0r" id="Aje-2e-2iY"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem title="Delete" id="iSA-oN-c92">
+                                        <connections>
+                                            <action selector="deleteSelected:" destination="BYZ-38-t0r" id="rcr-PJ-r54"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
+                                <color key="tintColor" red="0.99028533551535902" green="0.98435548320688382" blue="0.99621518782383423" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </toolbar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uAD-b7-guQ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" indicatorStyle="white" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uAD-b7-guQ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Rz4-lY-qoP">
-                                    <size key="itemSize" width="96" height="96"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" red="0.99028533549999997" green="0.98435548319999999" blue="0.99621518779999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yc1-6d-ObR">
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="eqv-lh-rjq" customClass="CollectionViewCell" customModule="Micco" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <rect key="frame" x="0.0" y="10" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mbM-2S-OTO">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Check" translatesAutoresizingMaskIntoConstraints="NO" id="LOC-sQ-IMi">
+                                                    <rect key="frame" x="96" y="0.0" width="32" height="32"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
+                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                         <size key="customSize" width="128" height="128"/>
                                         <connections>
+                                            <outlet property="cellCheckMarkImage" destination="LOC-sQ-IMi" id="IYw-PM-DZS"/>
                                             <outlet property="image" destination="mbM-2S-OTO" id="i05-EU-0BG"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="uNf-74-ZDo"/>
@@ -109,12 +122,42 @@
         <scene sceneID="11z-Qr-rnL">
             <objects>
                 <viewController id="9wE-Ul-xD5" customClass="ImageViewController" customModule="Micco" customModuleProvider="target" sceneMemberID="viewController">
-                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="6kQ-mo-JFO">
+                    <view key="view" contentMode="scaleToFill" id="jSl-pW-CTG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fvk-KA-cM8">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hb5-rN-uq2">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Hb5-rN-uq2" firstAttribute="leading" secondItem="Fvk-KA-cM8" secondAttribute="leading" id="0jf-nD-gYo"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hb5-rN-uq2" secondAttribute="bottom" id="Ugt-lx-NJU"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hb5-rN-uq2" secondAttribute="trailing" id="VHL-6G-NDv"/>
+                                    <constraint firstItem="Hb5-rN-uq2" firstAttribute="centerX" secondItem="Fvk-KA-cM8" secondAttribute="centerX" id="bvt-RI-UI6"/>
+                                    <constraint firstItem="Hb5-rN-uq2" firstAttribute="centerY" secondItem="Fvk-KA-cM8" secondAttribute="centerY" id="rb2-Nx-BVi"/>
+                                    <constraint firstItem="Hb5-rN-uq2" firstAttribute="top" secondItem="Fvk-KA-cM8" secondAttribute="top" id="vTd-g8-aON"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="9wE-Ul-xD5" id="6xq-Gy-cqx"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Fvk-KA-cM8" secondAttribute="trailing" id="6Bo-fp-kNh"/>
+                            <constraint firstItem="Fvk-KA-cM8" firstAttribute="leading" secondItem="jSl-pW-CTG" secondAttribute="leading" id="HGP-je-VCR"/>
+                            <constraint firstItem="Fvk-KA-cM8" firstAttribute="bottom" secondItem="6ZW-mx-b2h" secondAttribute="bottom" id="HqI-0k-B7e"/>
+                            <constraint firstItem="Fvk-KA-cM8" firstAttribute="top" secondItem="6ZW-mx-b2h" secondAttribute="top" id="d5L-sx-asy"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6ZW-mx-b2h"/>
+                    </view>
                     <connections>
-                        <outlet property="image" destination="6kQ-mo-JFO" id="AFh-qC-hGb"/>
+                        <outlet property="image" destination="Hb5-rN-uq2" id="AcQ-5U-EGJ"/>
+                        <outlet property="scrollView" destination="Fvk-KA-cM8" id="Y0Z-gJ-lPF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rD5-ax-Hi6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -126,7 +169,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gPw-Jn-lL9" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QcT-Cf-dSZ">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="QcT-Cf-dSZ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -140,4 +183,7 @@
             <point key="canvasLocation" x="-124" y="162"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Check" width="256" height="256"/>
+    </resources>
 </document>
